Part_One: config sql database

--- a/.env
+++ b/.env
@@ -1,9 +1,17 @@
 # postgres
-TZ_SET=Canada/Montréal
-PG_VER=14.0
+PG_VER=14-alpine
 POSTGRES_SRC_PASSWORD=Sup3rS3c3t
 PORT=5432
 POSTGRES_USER=postgres
 HOSTNAME=postgres
 CONTAINER_NAME=postgres
 POSTGRES_DB=postgres
+
+# all
+TZ_SET=Canada/Central
+
+# mysql
+MY_DB_NAME=testdb
+MY_DB_USER=myuser
+MY_DB_PASSWORD=mypassword
+MY_DB_ROOT_PASSWORD=myrootpassword
